--- a/index.html
+++ b/index.html
@@ -55,16 +55,16 @@ layout: default
         <table>
             <tbody>
                 <tr>
-                    <td>Monday – Friday</td>
-                    <td>{{ site.monday_friday }}</td>
+                    <td>Dimanche – Jeudi</td>
+                    <td>{{ site.dimanche_jeudi }}</td>
                 </tr>
                 <tr>
-                    <td>Saturday</td>
-                    <td>{{ site.saturday }}</td>
+                    <td>Samedi</td>
+                    <td>{{ site.samedi }}</td>
                 </tr>
                 <tr>
-                    <td>Sunday</td>
-                    <td>{{ site.sunday }}</td>
+                    <td>Vendredi</td>
+                    <td>{{ site.vendredi }}</td>
                 </tr>
             </tbody>
         </table>
