added maps and deleted some sections

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ layout: default
         </div>
     </div>
 
-    <div class="container-fluid">
+    <!--<div class="container-fluid">
         
         <div class="col-sm-6 col-sm-offset-6 col-md-4 col-md-offset-8 form">
             <h3><svg class="icon icon-envelope-o"><use xlink:href="#icon-envelope-o"></use></svg>Make an Appointment</h3>
@@ -34,7 +34,7 @@ layout: default
             </form>
         </div>
 
-    </div>
+    </div>-->
 </div>
 <!-- End Hero -->
 
@@ -151,7 +151,7 @@ layout: default
 <!-- End Treatments -->
 
 <!-- Start Our team -->
-<div id="team" class="team"> 
+<!--<div id="team" class="team"> 
     <h2 class="section-title">Our Team</h2> 
     <div id="team-carousel">
     {% for member in site.data.team %}
@@ -169,11 +169,11 @@ layout: default
         </div>
     {% endfor %}
     </div>
-</div>
+</div>-->
 <!-- End Our team -->
 
 <!-- Start Testimonials -->
-<div id="testimonials" class="testimonials parallax" style="background-image: url('{{ site.baseurl }}/img/{{ site.testimonials.testimonials_img }}');">
+<!--<div id="testimonials" class="testimonials parallax" style="background-image: url('{{ site.baseurl }}/img/{{ site.testimonials.testimonials_img }}');">
     <div class="overlay-container">
         <div class="overlay"></div>
         <div class="container-fluid">
@@ -193,7 +193,7 @@ layout: default
             </div>
         </div>
     </div>
-</div>
+</div>-->
 <!-- End Testimonials -->
 
 <!-- Start Gallery -->
@@ -216,5 +216,16 @@ layout: default
 <!-- End Gallery -->
 
 <!-- Start Map -->
-<div id="location" class="map" data-zoom="{{ site.map.zoom }}" data-address="{{ site.map.address }}" data-address-details="<img src='{{ site.map.address_details }}'>"></div>
+<!--<div id="location" class="map" data-zoom="{{ site.map.zoom }}" data-address="{{ site.map.address }}" data-address-details="<img src='{{ site.map.address_details }}'>"></div>-->
+<div id="location" style="height:400px;width:100%;"></div>
+<script>
+function myMap() {
+var myCenter = new google.maps.LatLng(36.758273, 3.457447);
+var mapProp = {center:myCenter, zoom:12, scrollwheel:false, draggable:false, mapTypeId:google.maps.MapTypeId.ROADMAP};
+var map = new google.maps.Map(document.getElementById("location"),mapProp);
+var marker = new google.maps.Marker({position:myCenter});
+marker.setMap(map);
+}
+</script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDnL8unPJDpxMNsVcG0CAp3E3KCaIM9bJ4&callback=myMap"></script>
 <!-- End Map -->
