--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@ layout: default
         </div>
     </div>
 
-    <!--<div class="container-fluid">
+    <div class="container-fluid">
         
-        <div class="col-sm-6 col-sm-offset-6 col-md-4 col-md-offset-8 form">
+        <!--<div class="col-sm-6 col-sm-offset-6 col-md-4 col-md-offset-8 form">
             <h3><svg class="icon icon-envelope-o"><use xlink:href="#icon-envelope-o"></use></svg>Make an Appointment</h3>
             <form action="https://getsimpleform.com/messages?form_api_token={{ site.api_token }}" method="post">
                 <div class="form-field">
@@ -32,9 +32,9 @@ layout: default
                 </div>
                 <input type="submit" class="btn btn-default" value="Send">
             </form>
-        </div>
+        </div>-->
 
-    </div>-->
+    </div>
 </div>
 <!-- End Hero -->
 
@@ -196,6 +196,21 @@ layout: default
 </div>-->
 <!-- End Testimonials -->
 
+<!-- Start Map -->
+<!--<div id="location" class="map" data-zoom="{{ site.map.zoom }}" data-address="{{ site.map.address }}" data-address-details="<img src='{{ site.map.address_details }}'>"></div>-->
+<div id="location" style="height:400px;width:100%;"></div>
+<script>
+function myMap() {
+var myCenter = new google.maps.LatLng(36.758273, 3.457447);
+var mapProp = {center:myCenter, zoom:16, scrollwheel:false, draggable:false, mapTypeId:google.maps.MapTypeId.ROADMAP};
+var map = new google.maps.Map(document.getElementById("location"),mapProp);
+var marker = new google.maps.Marker({position:myCenter});
+marker.setMap(map);
+}
+</script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDnL8unPJDpxMNsVcG0CAp3E3KCaIM9bJ4&callback=myMap"></script>
+<!-- End Map -->
+
 <!-- Start Gallery -->
 <div id="gallery" class="gallery">
         
@@ -215,17 +230,4 @@ layout: default
 </div>
 <!-- End Gallery -->
 
-<!-- Start Map -->
-<!--<div id="location" class="map" data-zoom="{{ site.map.zoom }}" data-address="{{ site.map.address }}" data-address-details="<img src='{{ site.map.address_details }}'>"></div>-->
-<div id="location" style="height:400px;width:100%;"></div>
-<script>
-function myMap() {
-var myCenter = new google.maps.LatLng(36.758273, 3.457447);
-var mapProp = {center:myCenter, zoom:12, scrollwheel:false, draggable:false, mapTypeId:google.maps.MapTypeId.ROADMAP};
-var map = new google.maps.Map(document.getElementById("location"),mapProp);
-var marker = new google.maps.Marker({position:myCenter});
-marker.setMap(map);
-}
-</script>
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDnL8unPJDpxMNsVcG0CAp3E3KCaIM9bJ4&callback=myMap"></script>
-<!-- End Map -->
+
