--- a/index.html
+++ b/index.html
@@ -1,6 +1,4 @@
----
-layout: default
----
+--- layout: default ---
 <!-- Start About -->
 <div id="about" class="about">
     <div class="container-fluid">
@@ -57,9 +55,10 @@ layout: default
         <svg class="icon icon-envelope-o"><use xlink:href="#icon-envelope-o"></use></svg>
         <h3>Contact</h3>
         <ul>
-            {% if site.contact.phone %}<li><strong>Tel:</strong> {{ site.contact.phone }}</li>{% endif %}
-            {% if site.contact.emergency %}<li><strong>Urgences:</strong> {{ site.contact.emergency }}</li>{% endif %}
-            {% if site.contact.email %}<li><strong>Email:</strong> {{ site.contact.email }}</li>{% endif %}
+            {% if site.contact.phone %}
+            <li><strong>Tel:</strong> {{ site.contact.phone }}</li>{% endif %} {% if site.contact.emergency %}
+            <li><strong>Urgences:</strong> {{ site.contact.emergency }}</li>{% endif %} {% if site.contact.email %}
+            <li><strong>Email:</strong> {{ site.contact.email }}</li>{% endif %}
         </ul>
     </div>
     <div class="col-sm-4">
@@ -85,9 +84,9 @@ layout: default
     <div class="col-sm-4">
         <svg class="icon icon-map-marker"><use xlink:href="#icon-map-marker"></use></svg>
         <h3>Localisation</h3>
-            <p>
-                {{ site.contact.address }}
-            </p>
+        <p>
+            {{ site.contact.address }}
+        </p>
     </div>
 </div>
 <!-- End 3 columns -->
@@ -101,13 +100,13 @@ layout: default
 
         <div class="row">
             {% for treatment in site.data.treatments %}
-                <div class="col-sm-6 col-md-4">
-                    <div class="icon-box">
-                        <svg class="icon {{ treatment.icon }}"><use xlink:href="#{{ treatment.icon }}"></use></svg>
-                        <h4>{{ treatment.title }}</h4>
-                        <p>{{ treatment.description }}</p>
-                    </div>
+            <div class="col-sm-6 col-md-4">
+                <div class="icon-box">
+                    <svg class="icon {{ treatment.icon }}"><use xlink:href="#{{ treatment.icon }}"></use></svg>
+                    <h4>{{ treatment.title }}</h4>
+                    <p>{{ treatment.description }}</p>
                 </div>
+            </div>
             {% endfor %}
         </div>
     </div>
@@ -119,11 +118,19 @@ layout: default
     <div id="location" style="height:450px;width:100%;">
         <script>
             function myMap() {
-            var myCenter = new google.maps.LatLng(36.758273, 3.457447);
-            var mapProp = {center:myCenter, zoom:16, scrollwheel:true, draggable:true, mapTypeId:google.maps.MapTypeId.ROADMAP};
-            var map = new google.maps.Map(document.getElementById("location"),mapProp);
-            var marker = new google.maps.Marker({position:myCenter});
-            marker.setMap(map);
+                var myCenter = new google.maps.LatLng(36.758273, 3.457447);
+                var mapProp = {
+                    center: myCenter,
+                    zoom: 16,
+                    scrollwheel: true,
+                    draggable: true,
+                    mapTypeId: google.maps.MapTypeId.ROADMAP
+                };
+                var map = new google.maps.Map(document.getElementById("location"), mapProp);
+                var marker = new google.maps.Marker({
+                    position: myCenter
+                });
+                marker.setMap(map);
             }
         </script>
         <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDnL8unPJDpxMNsVcG0CAp3E3KCaIM9bJ4&callback=myMap"></script>
@@ -133,21 +140,55 @@ layout: default
 
 <!-- Start Gallery -->
 <div id="gallery" class="gallery">
-        
+
     <h2 class="section-title">Gallery</h2>
 
     {% for images in site.data.gallery %}
-        <a href="{{ site.baseurl }}/img/gallery/large/{{ images.image_large }}" class="gallery-item expandable-box image-link">
-            <div class="expandable-box-top">
-                <img src="{{ site.baseurl }}/img/gallery/thumb/{{ images.image_thumb }}" alt="{{ images.image_alt }}">
-            </div>
-            <div class="expandable-box-bottom">
-                <span><svg class="icon icon-chain"><use xlink:href="#icon-chain"></use></svg></span>
-            </div>
-        </a>
+    <a href="{{ site.baseurl }}/img/gallery/large/{{ images.image_large }}" class="gallery-item expandable-box image-link">
+        <div class="expandable-box-top">
+            <img src="{{ site.baseurl }}/img/gallery/thumb/{{ images.image_thumb }}" alt="{{ images.image_alt }}">
+        </div>
+        <div class="expandable-box-bottom">
+            <span><svg class="icon icon-chain"><use xlink:href="#icon-chain"></use></svg></span>
+        </div>
+    </a>
     {% endfor %}
 
 </div>
 <!-- End Gallery -->
-
-
+<!-- Start timeline -->
+<div id="timeline" class="cd-timeline">
+    <div class="cd-timeline-block">
+        <div class="cd-timeline-img cd-picture">
+            <img src="img/cd-icon-picture.svg" alt="Picture">
+        </div>
+        <div class="cd-timeline-content">
+            <h2>Médecin Généraliste</h2>
+            <p>Avec <b>Mention Très Bien</b>. Après 3 ans d'internat, principalement à l'hopital Mustapha Bacha (Alger).</p>
+            <span class="cd-date">Juin 2004</span>
+        </div>
+    </div>
+    <div class="cd-timeline-block">
+        <div class="cd-timeline-img cd-picture">
+            <img src="img/cd-icon-picture.svg" alt="Picture">
+        </div>
+        <div class="cd-timeline-content">
+            <h2>Médecin Spécialiste en Dermatologie</h2>
+            <p>Classé parmi les 10% premiers du concours d'admission (sur environs 2500 personnes). Le Dr. N. Imadali se spécialise en dermatologie à l'hopital Mustapha Bacha (Alger). Le docteur participe aussi à divers siminaires et travaille à ses heures
+                pour remplacer des confrères, faisant ainsi son expérience sur le terrain au près des patients de Sétif, Alger et Médéa.</p>
+            <span class="cd-date">Juin 2008</span>
+        </div>
+    </div>
+    <div class="cd-timeline-block">
+        <div class="cd-timeline-img cd-location">
+            <img src="img/cd-icon-location.svg" alt="Location">
+        </div>
+        <div class="cd-timeline-content">
+            <h2>Ouverture du cabinet spécialisé en Dermatologie à Boumerdès</h2>
+            <p>Le docteur accueille ses patients de 9h à 17h depuis près de 8 ans dans son cabinet de Boumerdès. Les patients lui reconnaissent son professionalisme, son écoute, son respect et sa rigeur dans son travail. Dés l'ouverture, les patients de
+                la ville de Boumerdès et de divers villes avoisinantes viennent le voir quotidiennement.</p>
+            <span class="cd-date">Septembre 2009</span>
+        </div>
+    </div>
+</div>
+<!-- End timeline -->
