--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
---- layout: default ---
+--- 
+layout: default 
+---
 <!-- Start About -->
 <div id="about" class="about">
     <div class="container-fluid">
@@ -55,10 +57,9 @@
         <svg class="icon icon-envelope-o"><use xlink:href="#icon-envelope-o"></use></svg>
         <h3>Contact</h3>
         <ul>
-            {% if site.contact.phone %}
-            <li><strong>Tel:</strong> {{ site.contact.phone }}</li>{% endif %} {% if site.contact.emergency %}
-            <li><strong>Urgences:</strong> {{ site.contact.emergency }}</li>{% endif %} {% if site.contact.email %}
-            <li><strong>Email:</strong> {{ site.contact.email }}</li>{% endif %}
+            {% if site.contact.phone %}<li><strong>Tel:</strong> {{ site.contact.phone }}</li>{% endif %} 
+            {% if site.contact.emergency %} <li><strong>Urgences:</strong> {{ site.contact.emergency }}</li>{% endif %} 
+            {% if site.contact.email %}<li><strong>Email:</strong> {{ site.contact.email }}</li>{% endif %}
         </ul>
     </div>
     <div class="col-sm-4">
