--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ layout: default
                 var mapProp = {
                     center: myCenter,
                     zoom: 16,
-                    scrollwheel: true,
+                    scrollwheel: false,
                     draggable: true,
                     mapTypeId: google.maps.MapTypeId.ROADMAP
                 };
