--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ layout: default
 </div>
 <!-- End Treatments -->
 <!-- Start Map -->
-<div class="container-fluid" style="padding-left: 0px; padding-right: 0px">
+<div class="container-map">
     <h2 class="section-title">Localisation</h2>
     <div id="location" style="height:450px;width:100%;">
         <script>
