--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ layout: default
 <!-- Start Treatments -->
 <div id="treatments" class="treatments">
     <div class="container-fluid">
-        <h2 class="section-title">Treatments</h2>
+        <h2 class="section-title">Traitements</h2>
 
         <div class="row">
             {% for treatment in site.data.treatments %}
@@ -142,7 +142,7 @@ layout: default
 <!-- Start Gallery -->
 <div id="gallery" class="gallery">
 
-    <h2 class="section-title">Gallery</h2>
+    <h2 class="section-title">Gallerie photo</h2>
 
     {% for images in site.data.gallery %}
     <a href="{{ site.baseurl }}/img/gallery/large/{{ images.image_large }}" class="gallery-item expandable-box image-link">
