added cabinet image and historique section name

--- a/index.html
+++ b/index.html
@@ -8,20 +8,18 @@ layout: default
 
         <div class="row">
             <div class="col-sm-6">
-                <h3>Welcome to DentistSmile</h3>
+                <h3>{{ site.title }}</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis nostrum ab vero temporibus magnam, delectus!</p>
-
                 <div class="media">
                     <div class="media-left">
                         <div class="boxed-icon">
-                            <svg class="icon icon-heart"><use xlink:href="#icon-heart"></use></svg>
+                            <svg class="icon icon-user-md"><use xlink:href="#icon-user-md"></use></svg>
                         </div>
                     </div>
                     <div class="media-body">
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam explicabo unde doloremque quo, fugit, nisi.</p>
                     </div>
                 </div>
-
                 <div class="media">
                     <div class="media-left">
                         <div class="boxed-icon">
@@ -32,11 +30,10 @@ layout: default
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam explicabo unde doloremque quo, fugit, nisi.</p>
                     </div>
                 </div>
-
                 <div class="media">
                     <div class="media-left">
                         <div class="boxed-icon">
-                            <svg class="icon icon-star"><use xlink:href="#icon-star"></use></svg>
+                            <svg class="icon icon-heart"><use xlink:href="#icon-heart"></use></svg>
                         </div>
                     </div>
                     <div class="media-body">
@@ -45,7 +42,7 @@ layout: default
                 </div>
             </div>
             <div class="col-sm-6">
-                <img src="img/about.jpg" alt="...">
+                <img src="img/cabinet.jpeg" alt="...">
             </div>
         </div>
     </div>
@@ -159,37 +156,40 @@ layout: default
 <!-- End Gallery -->
 <!-- Start timeline -->
 <div id="timeline" class="cd-timeline">
-    <div class="cd-timeline-block">
-        <div class="cd-timeline-img cd-picture">
-            <img src="img/cd-icon-picture.svg" alt="Picture">
+    <div class="container-fluid">
+        <h2 class="section-title">Historique</h2>
+        <div class="cd-timeline-block">
+            <div class="cd-timeline-img cd-picture">
+                <img src="img/cd-icon-picture.svg" alt="Picture">
+            </div>
+            <div class="cd-timeline-content">
+                <h2>Médecin Généraliste</h2>
+                <p>Avec <b>Mention Très Bien</b>. Après 3 ans d'internat, principalement à l'hopital Mustapha Bacha (Alger).</p>
+                <span class="cd-date">Juin 2004</span>
+            </div>
         </div>
-        <div class="cd-timeline-content">
-            <h2>Médecin Généraliste</h2>
-            <p>Avec <b>Mention Très Bien</b>. Après 3 ans d'internat, principalement à l'hopital Mustapha Bacha (Alger).</p>
-            <span class="cd-date">Juin 2004</span>
+        <div class="cd-timeline-block">
+            <div class="cd-timeline-img cd-picture">
+                <img src="img/cd-icon-picture.svg" alt="Picture">
+            </div>
+            <div class="cd-timeline-content">
+                <h2>Médecin Spécialiste en Dermatologie</h2>
+                <p>Classé parmi les 10% premiers du concours d'admission (sur environs 2500 personnes). Le Dr. N. Imadali se spécialise en dermatologie à l'hopital Mustapha Bacha (Alger). Le docteur participe aussi à divers siminaires et travaille à ses heures
+                    pour remplacer des confrères, faisant ainsi son expérience sur le terrain au près des patients de Sétif, Alger et Médéa.</p>
+                <span class="cd-date">Juin 2008</span>
+            </div>
         </div>
-    </div>
-    <div class="cd-timeline-block">
-        <div class="cd-timeline-img cd-picture">
-            <img src="img/cd-icon-picture.svg" alt="Picture">
+        <div class="cd-timeline-block">
+            <div class="cd-timeline-img cd-location">
+                <img src="img/cd-icon-location.svg" alt="Location">
+            </div>
+            <div class="cd-timeline-content">
+                <h2>Ouverture du cabinet spécialisé en Dermatologie à Boumerdès</h2>
+                <p>Le docteur accueille ses patients de 9h à 17h depuis près de 8 ans dans son cabinet de Boumerdès. Les patients lui reconnaissent son professionalisme, son écoute, son respect et sa rigeur dans son travail. Dés l'ouverture, les patients de
+                    la ville de Boumerdès et de divers villes avoisinantes viennent le voir quotidiennement.</p>
+                <span class="cd-date">Septembre 2009</span>
+            </div>
         </div>
-        <div class="cd-timeline-content">
-            <h2>Médecin Spécialiste en Dermatologie</h2>
-            <p>Classé parmi les 10% premiers du concours d'admission (sur environs 2500 personnes). Le Dr. N. Imadali se spécialise en dermatologie à l'hopital Mustapha Bacha (Alger). Le docteur participe aussi à divers siminaires et travaille à ses heures
-                pour remplacer des confrères, faisant ainsi son expérience sur le terrain au près des patients de Sétif, Alger et Médéa.</p>
-            <span class="cd-date">Juin 2008</span>
-        </div>
-    </div>
-    <div class="cd-timeline-block">
-        <div class="cd-timeline-img cd-location">
-            <img src="img/cd-icon-location.svg" alt="Location">
-        </div>
-        <div class="cd-timeline-content">
-            <h2>Ouverture du cabinet spécialisé en Dermatologie à Boumerdès</h2>
-            <p>Le docteur accueille ses patients de 9h à 17h depuis près de 8 ans dans son cabinet de Boumerdès. Les patients lui reconnaissent son professionalisme, son écoute, son respect et sa rigeur dans son travail. Dés l'ouverture, les patients de
-                la ville de Boumerdès et de divers villes avoisinantes viennent le voir quotidiennement.</p>
-            <span class="cd-date">Septembre 2009</span>
-        </div>
-    </div>
+    </div>       
 </div>
 <!-- End timeline -->
