changed localisation href pointer

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ layout: default
 <!-- End Treatments -->
 <!-- Start Map -->
 <div class="container-map">
-    <h2 class="section-title">Localisation</h2>
+    <h2 id = "loc" class="section-title">Localisation</h2>
     <div id="location" style="height:450px;width:100%;">
         <script>
             function myMap() {
