nouvelle photo et infos traitements

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ layout: default
                 </div>
             </div>
             <div class="col-sm-6">
-                <img src="img/cabinet.jpg" alt="...">
+                <img src="img/photo-nabil.jpg" alt="...">
             </div>
         </div>
     </div>
