updated presentation section

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ layout: default
         <div class="row">
             <div class="col-sm-6">
                 <h3>{{ site.title }}</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis nostrum ab vero temporibus magnam, delectus!</p>
+                <p>Informations sur le cabinet de Dermatologie et esthétique du Docteur Nabil IMADALI à Boumerdès.</p>
                 <div class="media">
                     <div class="media-left">
                         <div class="boxed-icon">
@@ -17,7 +17,7 @@ layout: default
                         </div>
                     </div>
                     <div class="media-body">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam explicabo unde doloremque quo, fugit, nisi.</p>
+                        <p>Soins variés: Dermatologie générale, Chirurgie dermatologique, Épilation au LASER de marque CYNOSURE, Cryothérapie et Mésopécie.</p>
                     </div>
                 </div>
                 <div class="media">
@@ -27,7 +27,7 @@ layout: default
                         </div>
                     </div>
                     <div class="media-body">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam explicabo unde doloremque quo, fugit, nisi.</p>
+                        <p>Cabinet de dermatologie et centre Laser de <a class="scroll" href="#loc">Boumérdès</a>. Horaires d'ouverture en semaine (Dimanche à Jeudi): 9-17h. Le Samedi: 9-16h.</p>
                     </div>
                 </div>
                 <div class="media">
@@ -37,7 +37,7 @@ layout: default
                         </div>
                     </div>
                     <div class="media-body">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam explicabo unde doloremque quo, fugit, nisi.</p>
+                        <p>Tarifs laser pour le visage: 4000 à 5000DA, jambes: 15000 da, cuisses: 17000 da, maillot: 7000 à 10000 da, aisselles: 5000 da.</p>
                     </div>
                 </div>
             </div>
