changed background of timeline by changing class

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@ layout: default
 </div>
 <!-- End Gallery -->
 <!-- Start timeline -->
-<div id="timeline" class="cd-timeline">
+<div id="timeline" class="treatments">
     <div class="container-fluid">
         <h2 class="section-title">Historique</h2>
         <div class="cd-timeline-block">
