--- a/index.html
+++ b/index.html
@@ -174,9 +174,19 @@ layout: default
             </div>
             <div class="cd-timeline-content">
                 <h2>Médecin Spécialiste en Dermatologie</h2>
-                <p>Classé parmi les 10% premiers du concours d'admission (sur environs 2500 personnes). Le Dr. N. Imadali se spécialise en dermatologie à l'hopital Mustapha Bacha (Alger). Le docteur participe aussi à divers siminaires et travaille à ses heures
+                <p>Classé parmi les 10% premiers du concours d'admission (27 sur environs 2500 personnes). Le Dr. N. Imadali se spécialise en dermatologie à l'hopital Mustapha Bacha (Alger). Le docteur participe aussi à divers séminaires et travaille à ses heures
                     pour remplacer des confrères, faisant ainsi son expérience sur le terrain au près des patients de Sétif, Alger et Médéa.</p>
                 <span class="cd-date">Juin 2008</span>
+            </div>
+        </div>
+        <div class="cd-timeline-block">
+            <div class="cd-timeline-img cd-picture">
+                <img src="img/cd-icon-picture.svg" alt="Picture">
+            </div>
+            <div class="cd-timeline-content">
+                <h2>Diplômes obtenus d'université Françaises </h2>
+                <p> Diplôme interuniversitaire (DIU) <b>"Peau et médecine interne" de l'universite de Pierre et Marie Curie</b>, Paris 6. Attestation Laser et Peau de <b>l'université de Marseille</b>.</p>
+                <span class="cd-date">Septembre 2010</span>
             </div>
         </div>
         <div class="cd-timeline-block">
