--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@ layout: default
             </div>
             <div class="cd-timeline-content">
                 <h2>Ouverture du cabinet spécialisé en Dermatologie à Boumerdès</h2>
-                <p>Le docteur accueille ses patients de 9h à 17h depuis près de 8 ans dans son cabinet de Boumerdès. Les patients lui reconnaissent son professionalisme, son écoute, son respect et sa rigeur dans son travail. Dés l'ouverture, les patients de
+                <p>Le docteur accueille ses patients de 9h à 17h depuis près de 8 ans dans son cabinet de Boumerdès. Les patients lui reconnaissent son professionalisme, son écoute, son respect et sa rigueur dans son travail. Dés l'ouverture, les patients de
                     la ville de Boumerdès et de divers villes avoisinantes viennent le voir quotidiennement.</p>
                 <span class="cd-date">Septembre 2009</span>
             </div>
