--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ layout: default
                         </div>
                     </div>
                     <div class="media-body">
-                        <p>Cabinet de dermatologie et centre Laser de <a class="scroll" href="#loc">Boumérdès</a>. Horaires d'ouverture en semaine (Dimanche à Jeudi): 9-17h. Le Samedi: 9-16h.</p>
+                        <p>Cabinet de dermatologie et centre Laser de <a class="scroll" href="#loc">Boumérdès</a>. Horaires d'ouverture en semaine (Samedi à Jeudi): 8-17h.</p>
                     </div>
                 </div>
                 <div class="media">
@@ -37,7 +37,7 @@ layout: default
                         </div>
                     </div>
                     <div class="media-body">
-                        <p>Tarifs laser pour le visage: 4000 à 5000DA, jambes: 15000 da, cuisses: 17000 da, maillot: 7000 à 10000 da, aisselles: 5000 da.</p>
+                        <p>Tarifs laser pour le visage: 4000 à 5000DA, jambes: 15000DA, cuisses: 17000DA, maillot: 7000 à 10000DA, aisselles: 5000DA.</p>
                     </div>
                 </div>
             </div>
@@ -163,20 +163,20 @@ layout: default
                 <img src="img/cd-icon-picture.svg" alt="Picture">
             </div>
             <div class="cd-timeline-content">
-                <h2>Médecin Généraliste</h2>
-                <p>Avec <b>Mention Très Bien</b>. Après 3 ans d'internat, principalement à l'hopital Mustapha Bacha (Alger).</p>
-                <span class="cd-date">Juin 2004</span>
+                <h2>Médecin Spécialiste en Dermatologie</h2>
+                <p>Classé parmi les 10% premiers du concours d'admission (27 sur environs 2500 personnes). Le Dr. N. Imadali se spécialise en dermatologie à l'hopital Mustapha Bacha (Alger) après 4 ans de résidanat. Le docteur a participé à divers séminaires et formations en Algérie et à l'étranger.</p>
+                <span class="cd-date">Juin 2008</span>
             </div>
         </div>
         <div class="cd-timeline-block">
-            <div class="cd-timeline-img cd-picture">
-                <img src="img/cd-icon-picture.svg" alt="Picture">
+            <div class="cd-timeline-img cd-location">
+                <img src="img/cd-icon-location.svg" alt="Location">
             </div>
             <div class="cd-timeline-content">
-                <h2>Médecin Spécialiste en Dermatologie</h2>
-                <p>Classé parmi les 10% premiers du concours d'admission (27 sur environs 2500 personnes). Le Dr. N. Imadali se spécialise en dermatologie à l'hopital Mustapha Bacha (Alger). Le docteur participe aussi à divers séminaires et travaille à ses heures
-                    pour remplacer des confrères, faisant ainsi son expérience sur le terrain au près des patients de Sétif, Alger et Médéa.</p>
-                <span class="cd-date">Juin 2008</span>
+                <h2>Ouverture du cabinet spécialisé en Dermatologie à Boumerdès</h2>
+                <p>Le docteur accueille ses patients de 8h à 17h depuis près de 8 ans dans son cabinet de Boumerdès. Les patients lui reconnaissent son professionalisme, son écoute, son respect et sa rigueur dans son travail. Dés l'ouverture, les patients de
+                    la ville de Boumerdès et de divers villes avoisinantes viennent le voir quotidiennement.</p>
+                <span class="cd-date">Septembre 2009</span>
             </div>
         </div>
         <div class="cd-timeline-block">
@@ -187,17 +187,6 @@ layout: default
                 <h2>Diplômes obtenus d'université Françaises </h2>
                 <p> Diplôme interuniversitaire (DIU) <b>"Peau et médecine interne" de l'universite de Pierre et Marie Curie</b>, Paris 6. Attestation Laser et Peau de <b>l'université de Marseille</b>.</p>
                 <span class="cd-date">Septembre 2010</span>
-            </div>
-        </div>
-        <div class="cd-timeline-block">
-            <div class="cd-timeline-img cd-location">
-                <img src="img/cd-icon-location.svg" alt="Location">
-            </div>
-            <div class="cd-timeline-content">
-                <h2>Ouverture du cabinet spécialisé en Dermatologie à Boumerdès</h2>
-                <p>Le docteur accueille ses patients de 9h à 17h depuis près de 8 ans dans son cabinet de Boumerdès. Les patients lui reconnaissent son professionalisme, son écoute, son respect et sa rigueur dans son travail. Dés l'ouverture, les patients de
-                    la ville de Boumerdès et de divers villes avoisinantes viennent le voir quotidiennement.</p>
-                <span class="cd-date">Septembre 2009</span>
             </div>
         </div>
     </div>       
