corrected date fuckup

--- a/index.html
+++ b/index.html
@@ -65,12 +65,8 @@ layout: default
         <table>
             <tbody>
                 <tr>
-                    <td>Dimanche – Jeudi</td>
-                    <td>{{ site.dimanche_jeudi }}</td>
-                </tr>
-                <tr>
-                    <td>Samedi</td>
-                    <td>{{ site.samedi }}</td>
+                    <td>Samedi – Jeudi</td>
+                    <td>{{ site.samedi_jeudi }}</td>
                 </tr>
                 <tr>
                     <td>Vendredi</td>
