--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@ layout: default
                 <img src="img/cd-icon-picture.svg" alt="Picture">
             </div>
             <div class="cd-timeline-content">
-                <h2>Diplômes obtenus d'université Françaises </h2>
+                <h2>Diplômes obtenus d'universités Françaises </h2>
                 <p> Diplôme interuniversitaire (DIU) <b>"Peau et médecine interne" de l'universite de Pierre et Marie Curie</b>, Paris 6. Attestation Laser et Peau de <b>l'université de Marseille</b>.</p>
                 <span class="cd-date">Septembre 2010</span>
             </div>
